<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowDx="8"
        android:shadowDy="8"
        android:shadowRadius="5"
        android:text="@string/login"
        android:textColor="@color/login_text"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_input_shape"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:hint="@string/username"
            android:padding="4dp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/login_input_shape"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:hint="@string/username"
            android:padding="4dp"
            android:textColor="@color/black" />
    </LinearLayout>


    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="4dp"
        android:shadowColor="@color/black"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="5"
        android:gravity="center"
        android:text="@string/login_anotation"
        android:textColor="@color/login_btn_border"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.5" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.5">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/login_btn"
            android:layout_gravity="center_vertical"
            android:text="@string/login"
            android:textSize="30sp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_margin="4dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/login_btn"
            android:text="@string/cancel"
            android:layout_gravity="center_vertical"
            android:textSize="30sp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_margin="4dp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>